# Best_idea2_ws

./: ukf.yaml
diffdrive_arduino/: instructions.txt  package.xml
diffdrive_arduino/bringup/config/: diffbot_controllers.yaml  mapper_params_online_async.yaml  twist_mux.yaml
diffdrive_arduino/bringup/launch/: diffbot.launch.py  diffbot.launch.py.save
diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
diffdrive_arduino/description/rviz/: diffbot.rviz
diffdrive_arduino/description/urdf/: diffbot_description.urdf.xacro  lidar.xacro
diffdrive_arduino/hardware/: diffbot_system.cpp
diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.hpp
python_scripts/: package.xml  setup.py  thermalCam.py
python_scripts/python_scripts/: ICPtoOdom.py  avoidance.py  planner.py  thermalCam.py
ros2_mpu6050/config/: params.yaml
